--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -60,7 +60,9 @@ jobs:
 
       - name: Install pnpm (if needed)
         if: ${{ steps.detect-package-manager.outputs.manager == 'pnpm' }}
-        run: npm install -g pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
 
       - name: Setup Pages
         id: pages
