--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.3",
     "sharp": "^0.34.3",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "twgl.js": "^7.0.0"
   },
   "packageManager": "pnpm@10.14.0",
   "pnpm": {
